// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test StepTune should render correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <div
                class="ant-modal-body"
              >
                <div>
                  <img
                    id="tunedImage"
                    src=""
                    style="height: 558px;"
                  />
                </div>
                <div>
                  <div
                    class="title"
                  >
                    tuning
                  </div>
                  <div>
                    <h5
                      class="subtitle"
                    >
                      threshold
                    </h5>
                    <div
                      class="ant-slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                      id="threshold"
                    >
                      <div
                        class="ant-slider-rail"
                      />
                      <div
                        class="ant-slider-track"
                        style="left: 0%; width: 50.19607843137255%;"
                      />
                      <div
                        class="ant-slider-step"
                      />
                      <div
                        aria-disabled="false"
                        aria-orientation="horizontal"
                        aria-valuemax="255"
                        aria-valuemin="0"
                        aria-valuenow="128"
                        class="ant-slider-handle"
                        role="slider"
                        style="left: 50.19607843137255%; transform: translateX(-50%);"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    cancel
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    back
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  type="button"
                >
                  <span>
                    next
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test StepTune should render correctly 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <div
                class="ant-modal-body"
              >
                <div>
                  <img
                    id="tunedImage"
                    src="mock-base64"
                    style="height: 558px;"
                  />
                </div>
                <div>
                  <div
                    class="title"
                  >
                    tuning
                  </div>
                  <div>
                    <h5
                      class="subtitle"
                    >
                      threshold
                    </h5>
                    <div
                      class="ant-slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                      id="threshold"
                    >
                      <div
                        class="ant-slider-rail"
                      />
                      <div
                        class="ant-slider-track"
                        style="left: 0%; width: 50.19607843137255%;"
                      />
                      <div
                        class="ant-slider-step"
                      />
                      <div
                        aria-disabled="false"
                        aria-orientation="horizontal"
                        aria-valuemax="255"
                        aria-valuemin="0"
                        aria-valuenow="128"
                        class="ant-slider-handle"
                        role="slider"
                        style="left: 50.19607843137255%; transform: translateX(-50%);"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    cancel
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    back
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  type="button"
                >
                  <span>
                    next
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
